============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.6 - not yet released
* map
  - optional distinct map zoom on each page (#1603)
  - add label selection "Task waypoints & airfields"
* cross section
  - show airspace names (#1149, #2390)
  - use glide polar instead of current glide ratio (#2687)
* infoboxes
  - green InfoBox distance when inside observation zone (#2560)
  - limit the InfoBox aspect ratio
  - new InfoBox styles "Shaded" (#1852), "Glass" (#2466)
  - waypoint details button in target dialog (#1967)
  - show distance in radial InfoBox comment (#2577)
  - new InfoBox with radial and distance in nautical miles (#2269)
* user interface
  - replay fast-forward
  - new waypoint location editor (#343)
  - show required glide ratio in waypoint details (#1573)
  - add airspace ack button to map item list (#2139)
  - additionally show airspace altitude in feet (#2379)
  - show more files in replay file picker (#2582)
* tasks
  - MAT tasks (#563)
  - custom symmetric quadrant (#2125)
  - AAT keyhole (#1687)
* devices
  - Volkslogger: support IGC file download (#1972)
* Android
  - faster map renderer on some Android devices

Version 6.5.3 - not yet released
* user interface
  - eliminate flickering in the cross section on Windows
  - fix wrong radial display in target dialog
  - start at terrain center when there's no GPS fix and no home location
* task
  - fix line OZ rounding error (#2599)
* devices
  - FLARM: fix IGC file download on firmware 5.09 (#2619)
* Android
  - fix crash with Hebrew language
* Mac OS X
  - fix crash on startup (#2607, #2667)
  - show missing serial ports, hide internal devices (#2668)

Version 6.5.2 - 2013/03/15
* user interface
  - fix hang during startup (#2662, #2663)
  - fix freeze in dialogs (#2664)
  - automatically re-enable manual wind controls (#2336)